# RPIPico2-NFC-Exp

./: .gitmodules  README.md
exp/IDandPIN/: CMakeLists.txt  piconfc.cmake
exp/IDandPIN/src/: CMakeLists.txt  Switch4x4.cpp  Switch4x4.h  main.cpp
exp/OledTest/: CMakeLists.txt  ssd1306.cmake
exp/OledTest/src/: CMakeLists.txt  main.cpp
exp/simple/: CMakeLists.txt
exp/simple/src/: CMakeLists.txt  main.cpp
